--- a/.github/workflows/module2-azure-function-workflow.yaml
+++ b/.github/workflows/module2-azure-function-workflow.yaml
@@ -9,11 +9,15 @@ on:
       - 'tools/deploy/module2/**'
       - 'azure-function-workflow.yaml'
 
-env:
- 
+env: 
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'tools/deploy/module2/TransactionClassifier'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
   AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
