--- a/.github/workflows/module2-azure-function-workflow.yaml
+++ b/.github/workflows/module2-azure-function-workflow.yaml
@@ -17,14 +17,14 @@ env:
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read  # This is required for actions/checkout
-  
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     environment: dev
     steps:
     - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v3
+      uses: actions/checkout@main
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
