--- a/.github/workflows/module2-azure-function-workflow.yaml
+++ b/.github/workflows/module2-azure-function-workflow.yaml
@@ -10,7 +10,7 @@ on:
       - 'azure-function-workflow.yaml'
 
 env: 
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'tools/deploy/module2/TransactionClassifier'       # set this to the path to your function app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'tools/deploy/module2/TransactionClassifier/'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
   AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
 
@@ -38,7 +38,7 @@ jobs:
       with:
         azcliversion: latest
         inlineScript: |
-          echo "##[set-output name=appname;]$(az functionapp list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "[].name" -o tsv)"
+          echo "appName=$(az functionapp list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "[].name" -o tsv)" >> $GITHUB_OUTPUT
         
     - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
       uses: actions/setup-dotnet@v3
