--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: AKS DevSecOps Workshop
+title: Azure OpenAI API Hands-on LevelUp Labs
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hands-on AKS DevSecOps Workshop!
+  Hands-on Azure OpenAI API Hands-on LevelUp Labs!
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
@@ -76,7 +76,7 @@ search:
 # Footer content
 # appears at the bottom of every page's main content
 # Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust
-footer_content: "Distributed by an <a href=\"https://github.com/Azure/AKS-DevSecOps-Workshop/blob/main/LICENSE/LICENSE.txt\">MIT license.</a>"
+footer_content: "Distributed by an <a href=\"https://github.com/ahmedbham/azure-openai-api-levelup/blob/main/LICENSE/LICENSE.txt\">MIT license.</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -85,7 +85,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub."
-gh_edit_repository: "https://github.com/Azure/AKS-DevSecOps-Workshop" # the github URL for your repo
+gh_edit_repository: "https://github.com/ahmedbham/azure-openai-api-levelup" # the github URL for your repo
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
@@ -100,8 +100,8 @@ ga_tracking: UA-177508304-1
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
 # Aux links for the upper right navigation
 aux_links:
-  "AKS DevSecOps Workshop on GitHub":
-    - "//github.com/Azure/AKS-DevSecOps-Workshop"
+  "Azure OpenAI API Hands-on LevelUp Labs on GitHub":
+    - "//github.com/ahmedbham/azure-openai-api-levelup"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
