--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
         "ghcr.io/devcontainers/features/azure-cli:1.0.8": {},
         "ghcr.io/jlaundry/devcontainer-features/azure-functions-core-tools:1": {
 			"version": "latest"
-		} 
+		},
+        "ghcr.io/devcontainers/features/dotnet:1": {}
     },
     "customizations": {
         "vscode": {
