updates to devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,9 @@
 ARG VARIANT=bullseye
 FROM --platform=amd64 mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
+RUN wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+    && dpkg -i packages-microsoft-prod.deb
 RUN export DEBIAN_FRONTEND=noninteractive \
-     && apt-get update && apt-get install -y xdg-utils \
+     && apt-get update && apt-get install -y xdg-utils dotnet-sdk-7.0\
      && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 RUN curl -fsSL https://aka.ms/install-azd.sh | bash
+# RUN apt-get install -y dotnet-sdk-6.0
