--- a/.github/workflows/main_xact-classifier-openai-yv5ccgeeoqoww.yml
+++ b/.github/workflows/main_xact-classifier-openai-yv5ccgeeoqoww.yml
@@ -13,6 +13,10 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'tools/deploy/module1/TransactionClassifier/' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+  
 jobs:
   build-and-deploy:
     runs-on: windows-latest
@@ -24,6 +28,13 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}          
+         
 
       - name: 'Resolve Project Dependencies Using Dotnet'
         shell: pwsh
